// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kXdTdi"
  >
    Grid Item
  </div>
</DocumentFragment>
`;

exports[`GridItemBase should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kXdTdi"
  >
    Grid Item Base
  </div>
</DocumentFragment>
`;
